syntax = "proto3";

package notification;

option go_package = "github.com/ezex-io/ezex-notification/internal/adapters/grpc/proto";

service NotificationService {
  rpc SendOTP(SendOTPRequest) returns (SendOTPResponse) {}
}

message SendOTPRequest {
  string email = 1;
}

message SendOTPResponse {
  string otp = 1;
}